v.2.4 - Fixed the bug preventing selecting options
- The bug that prevented the user from selecting the dropdown items with 1 item in them has been solved. Issue was because we listen on change to the dropdown value, but without a default value the only option available was chosen, therefore preventing the user from re-selecting it and therefore unable to run the required function, as the value never technically changed.
- Issue was easily fixed by prepending an invisible, hidden option that is reset as the chosen value once an item has been chosen, to maintain the ability to select the singular dropdown items

--- a/public/styling/returnedItems.css
+++ b/public/styling/returnedItems.css
@@ -5,3 +5,6 @@
 .item:hover {
     text-decoration: underline;
 }
+option[value=""] {
+    display: none;
+}
